# ProyectoSO_1

./: README.md
Ransomware/: CLEANUP_PLAN.md  CMakeLists.txt  README.md  build.bat  build_unix.sh
Ransomware/include/core/: encryption.h  file_scanner.h
Ransomware/include/evasion/: anti_analysis.h
Ransomware/include/utils/: file_utils.h  key_persistence.h  logger.h
Ransomware/src/: main.cpp  security_checks_full.cpp.bak
Ransomware/src/core/: encryption.cpp  encryption_unix.cpp  file_scanner.cpp  file_scanner_unix.cpp
Ransomware/src/evasion/: anti_analysis.cpp  anti_analysis_unix.cpp
Ransomware/src/utils/: file_utils.cpp  file_utils_unix.cpp  key_persistence.cpp  logger.cpp  logger_unix.cpp
